[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
